kubernetes/whoami/httpgo.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpgo
  labels:
    app: httpgo
spec:
  type: ClusterIP
  ports:
  - port: 8888 # the port here is matching port used in veknet/httpgo cotainer
    protocol: TCP
    name: http
  selector:
    app: httpgo
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: httpgo
spec:
  selector:
    matchLabels:
      app: httpgo
  replicas: 1
  template:
    metadata:
      labels:
        app: httpgo
    spec:
      containers:
      - name: httpgo
        image: veknet/httpgo
        ports:
        - containerPort: 8888 # the port here is matching port used in veknet/httpgo cotainer
