kubernetes/whoami/ing-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: vk-k8s-test.web.cern.ch
    http:
      paths:
      - path: /https
        backend:
          serviceName: httpsgo
          servicePort: 443
      - path: /http
        backend:
          serviceName: httpgo
          servicePort: 8888
      - path: /
        backend:
          serviceName: httpsgo
          servicePort: 443
  tls:
  - hosts:
    - vk-k8s-test.web.cern.ch
  secretName: ing-secrets
